# fracdiff

./: .travis.yml  README.md  pyproject.toml  setup.py
fracdiff/: __init__.py  _stat.py  fracdiff.py  statfracdiff.py
sample/: plot.ipynb  spx.py  stat.py
sample/examples/: examples.ipynb
sample/exercise/: exercise.ipynb
sample/howto/: howto.ipynb  howto.py
tests/: _coef.py  coef.py  sample.sh  test_coef.py  test_coeff.py  test_error.py  test_linearity.py  test_one.py  test_params.py  test_stat.py  test_statfracdiff.py  test_tol.py
