[tool.poetry]
name = "fracdiff"
version = "0.0.3"
description = "Fractional differentiation of time-series."
authors = ["Shota Imaki <shota.imaki@icloud.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.0"
scikit-learn = "^0.22.1"
statsmodels = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
codecov = "^2.0.15"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
